// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Playback Event emitting Control Flow forEach 1`] = `
[
  {
    "collection": [
      "a",
      "b",
      "c",
    ],
    "commandId": "asdf0",
    "index": 0,
    "iterator": "a",
    "type": "loop",
  },
  {
    "collection": [
      "a",
      "b",
      "c",
    ],
    "commandId": "asdf0",
    "index": 1,
    "iterator": "b",
    "type": "loop",
  },
  {
    "collection": [
      "a",
      "b",
      "c",
    ],
    "commandId": "asdf0",
    "index": 2,
    "iterator": "c",
    "type": "loop",
  },
  {
    "commandId": "asdf0",
    "end": true,
    "type": "loop",
  },
]
`;

exports[`Playback Playback test queue should play a nested test case 1`] = `
[
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "1",
      "target": "",
      "value": "",
    },
    "id": "1",
    "state": "executing",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "1",
      "target": "",
      "value": "",
    },
    "id": "1",
    "message": undefined,
    "state": "passed",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "run",
      "id": "2",
      "target": "test2",
      "value": "",
    },
    "id": "2",
    "state": "executing",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "run",
      "id": "2",
      "target": "test2",
      "value": "",
    },
    "id": "2",
    "message": undefined,
    "state": "passed",
    "testID": "1",
  },
  {
    "callstackIndex": 1,
    "command": {
      "command": "open",
      "id": "4",
      "target": "",
      "value": "",
    },
    "id": "4",
    "state": "executing",
    "testID": "1",
  },
  {
    "callstackIndex": 1,
    "command": {
      "command": "open",
      "id": "4",
      "target": "",
      "value": "",
    },
    "id": "4",
    "message": undefined,
    "state": "passed",
    "testID": "1",
  },
  {
    "callstackIndex": 1,
    "command": {
      "command": "open",
      "id": "5",
      "target": "",
      "value": "",
    },
    "id": "5",
    "state": "executing",
    "testID": "1",
  },
  {
    "callstackIndex": 1,
    "command": {
      "command": "open",
      "id": "5",
      "target": "",
      "value": "",
    },
    "id": "5",
    "message": undefined,
    "state": "passed",
    "testID": "1",
  },
  {
    "callstackIndex": 1,
    "command": {
      "command": "open",
      "id": "6",
      "target": "",
      "value": "",
    },
    "id": "6",
    "state": "executing",
    "testID": "1",
  },
  {
    "callstackIndex": 1,
    "command": {
      "command": "open",
      "id": "6",
      "target": "",
      "value": "",
    },
    "id": "6",
    "message": undefined,
    "state": "passed",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "3",
      "target": "",
      "value": "",
    },
    "id": "3",
    "state": "executing",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "3",
      "target": "",
      "value": "",
    },
    "id": "3",
    "message": undefined,
    "state": "passed",
    "testID": "1",
  },
]
`;

exports[`Playback abort should abort a paused test 1`] = `
[
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "1",
      "target": "",
      "value": "",
    },
    "id": "1",
    "state": "executing",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "1",
      "target": "",
      "value": "",
    },
    "id": "1",
    "message": undefined,
    "state": "passed",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "2",
      "target": "",
      "value": "",
    },
    "id": "2",
    "state": "executing",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "2",
      "target": "",
      "value": "",
    },
    "id": "2",
    "message": undefined,
    "state": "passed",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "3",
      "target": "",
      "value": "",
    },
    "id": "3",
    "state": "executing",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "3",
      "target": "",
      "value": "",
    },
    "id": "3",
    "state": "executing",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "3",
      "target": "",
      "value": "",
    },
    "id": "3",
    "message": undefined,
    "state": "passed",
    "testID": "1",
  },
]
`;

exports[`Playback abort should abort a test 1`] = `
[
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "1",
      "target": "",
      "value": "",
    },
    "id": "1",
    "state": "executing",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "1",
      "target": "",
      "value": "",
    },
    "id": "1",
    "message": undefined,
    "state": "passed",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "2",
      "target": "",
      "value": "",
    },
    "id": "2",
    "state": "executing",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "2",
      "target": "",
      "value": "",
    },
    "id": "2",
    "message": undefined,
    "state": "passed",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "3",
      "target": "",
      "value": "",
    },
    "id": "3",
    "state": "executing",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "3",
      "target": "",
      "value": "",
    },
    "id": "3",
    "message": undefined,
    "state": "passed",
    "testID": "1",
  },
]
`;

exports[`Playback abort should abort a test after attempting to stop 1`] = `
[
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "1",
      "target": "",
      "value": "",
    },
    "id": "1",
    "state": "executing",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "1",
      "target": "",
      "value": "",
    },
    "id": "1",
    "message": undefined,
    "state": "passed",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "2",
      "target": "",
      "value": "",
    },
    "id": "2",
    "state": "executing",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "2",
      "target": "",
      "value": "",
    },
    "id": "2",
    "message": undefined,
    "state": "passed",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "3",
      "target": "",
      "value": "",
    },
    "id": "3",
    "state": "executing",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "3",
      "target": "",
      "value": "",
    },
    "error": [Error: Playback stopped],
    "id": "3",
    "message": "Playback stopped",
    "state": "errored",
    "testID": "1",
  },
]
`;

exports[`Playback ignore breakpoints should ignore breakpoints 1`] = `
[
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "1",
      "target": "",
      "value": "",
    },
    "id": "1",
    "state": "executing",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "1",
      "target": "",
      "value": "",
    },
    "id": "1",
    "message": undefined,
    "state": "passed",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "2",
      "isBreakpoint": true,
      "target": "",
      "value": "",
    },
    "id": "2",
    "state": "executing",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "2",
      "isBreakpoint": true,
      "target": "",
      "value": "",
    },
    "id": "2",
    "message": undefined,
    "state": "passed",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "3",
      "target": "",
      "value": "",
    },
    "id": "3",
    "state": "executing",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "3",
      "target": "",
      "value": "",
    },
    "id": "3",
    "message": undefined,
    "state": "passed",
    "testID": "1",
  },
]
`;

exports[`Playback pause on exceptions should pause for every type of error 1`] = `
[
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "1",
      "target": "",
      "value": "",
    },
    "id": "1",
    "state": "executing",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "1",
      "target": "",
      "value": "",
    },
    "error": [Error: Mock error in open during open::],
    "id": "1",
    "message": "Mock error in open during open::",
    "state": "errored",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "1",
      "target": "",
      "value": "",
    },
    "id": "1",
    "state": "executing",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "1",
      "target": "",
      "value": "",
    },
    "id": "1",
    "message": undefined,
    "state": "passed",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "verify",
      "id": "2",
      "target": "",
      "value": "",
    },
    "id": "2",
    "state": "executing",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "verify",
      "id": "2",
      "target": "",
      "value": "",
    },
    "error": [Error: Mock error in verify during verify::],
    "id": "2",
    "message": "Mock error in verify during verify::",
    "state": "failed",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "verify",
      "id": "2",
      "target": "",
      "value": "",
    },
    "id": "2",
    "state": "executing",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "verify",
      "id": "2",
      "target": "",
      "value": "",
    },
    "id": "2",
    "message": undefined,
    "state": "passed",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "assert",
      "id": "3",
      "target": "",
      "value": "",
    },
    "id": "3",
    "state": "executing",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "assert",
      "id": "3",
      "target": "",
      "value": "",
    },
    "error": [Error: Mock error in assert during assert::],
    "id": "3",
    "message": "Mock error in assert during assert::",
    "state": "failed",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "assert",
      "id": "3",
      "target": "",
      "value": "",
    },
    "id": "3",
    "state": "executing",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "assert",
      "id": "3",
      "target": "",
      "value": "",
    },
    "id": "3",
    "message": undefined,
    "state": "passed",
    "testID": "1",
  },
]
`;

exports[`Playback pause on exceptions should pause until the command is fixed 1`] = `
[
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "1",
      "target": "",
      "value": "",
    },
    "id": "1",
    "state": "executing",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "1",
      "target": "",
      "value": "",
    },
    "error": [Error: Mock open error during open::],
    "id": "1",
    "message": "Mock open error during open::",
    "state": "errored",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "1",
      "target": "",
      "value": "",
    },
    "id": "1",
    "state": "executing",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "1",
      "target": "",
      "value": "",
    },
    "error": [Error: Mock open error during open::],
    "id": "1",
    "message": "Mock open error during open::",
    "state": "errored",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "1",
      "target": "",
      "value": "",
    },
    "id": "1",
    "state": "executing",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "1",
      "target": "",
      "value": "",
    },
    "error": [Error: Mock open error during open::],
    "id": "1",
    "message": "Mock open error during open::",
    "state": "errored",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "1",
      "target": "",
      "value": "",
    },
    "id": "1",
    "state": "executing",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "1",
      "target": "",
      "value": "",
    },
    "id": "1",
    "message": undefined,
    "state": "passed",
    "testID": "1",
  },
]
`;

exports[`Playback resume resume after hitting a breakpoint 1`] = `
[
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "1",
      "target": "",
      "value": "",
    },
    "id": "1",
    "state": "executing",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "1",
      "target": "",
      "value": "",
    },
    "id": "1",
    "message": undefined,
    "state": "passed",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "2",
      "isBreakpoint": true,
      "target": "",
      "value": "",
    },
    "id": "2",
    "state": "executing",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "2",
      "isBreakpoint": true,
      "target": "",
      "value": "",
    },
    "id": "2",
    "state": "executing",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "2",
      "isBreakpoint": true,
      "target": "",
      "value": "",
    },
    "id": "2",
    "message": undefined,
    "state": "passed",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "3",
      "target": "",
      "value": "",
    },
    "id": "3",
    "state": "executing",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "3",
      "target": "",
      "value": "",
    },
    "id": "3",
    "message": undefined,
    "state": "passed",
    "testID": "1",
  },
]
`;

exports[`Playback resume should resume a paused test 1`] = `
[
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "1",
      "target": "",
      "value": "",
    },
    "id": "1",
    "state": "executing",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "1",
      "target": "",
      "value": "",
    },
    "id": "1",
    "message": undefined,
    "state": "passed",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "2",
      "target": "",
      "value": "",
    },
    "id": "2",
    "state": "executing",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "2",
      "target": "",
      "value": "",
    },
    "id": "2",
    "message": undefined,
    "state": "passed",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "3",
      "target": "",
      "value": "",
    },
    "id": "3",
    "state": "executing",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "3",
      "target": "",
      "value": "",
    },
    "id": "3",
    "state": "executing",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "3",
      "target": "",
      "value": "",
    },
    "id": "3",
    "message": undefined,
    "state": "passed",
    "testID": "1",
  },
]
`;

exports[`Playback stop should stop a paused test 1`] = `
[
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "1",
      "target": "",
      "value": "",
    },
    "id": "1",
    "state": "executing",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "1",
      "target": "",
      "value": "",
    },
    "id": "1",
    "message": undefined,
    "state": "passed",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "2",
      "target": "",
      "value": "",
    },
    "id": "2",
    "state": "executing",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "2",
      "target": "",
      "value": "",
    },
    "id": "2",
    "message": undefined,
    "state": "passed",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "3",
      "target": "",
      "value": "",
    },
    "id": "3",
    "state": "executing",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "3",
      "target": "",
      "value": "",
    },
    "id": "3",
    "state": "executing",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "3",
      "target": "",
      "value": "",
    },
    "error": [Error: Playback stopped],
    "id": "3",
    "message": "Playback stopped",
    "state": "errored",
    "testID": "1",
  },
]
`;

exports[`Playback stop should stop a test 1`] = `
[
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "1",
      "target": "",
      "value": "",
    },
    "id": "1",
    "state": "executing",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "1",
      "target": "",
      "value": "",
    },
    "id": "1",
    "message": undefined,
    "state": "passed",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "2",
      "target": "",
      "value": "",
    },
    "id": "2",
    "state": "executing",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "2",
      "target": "",
      "value": "",
    },
    "id": "2",
    "message": undefined,
    "state": "passed",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "3",
      "target": "",
      "value": "",
    },
    "id": "3",
    "state": "executing",
    "testID": "1",
  },
  {
    "callstackIndex": 0,
    "command": {
      "command": "open",
      "id": "3",
      "target": "",
      "value": "",
    },
    "error": [Error: Playback stopped],
    "id": "3",
    "message": "Playback stopped",
    "state": "errored",
    "testID": "1",
  },
]
`;
